rpi5/apps/templates/longhorn.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
