rpi5/apps/templates/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-server
  namespace: default
spec:
  selector:
    app: test-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
